# test-streamlit

./: README.md  pyproject.toml  requirements.txt
dados_fake/: dados_fake.py  dados_fake.xlsx  dados_fake_incorretos.xlsx
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_contrato.py  teste_funcional.py
