[tool.poetry]
name = "projeto-validacao-excel"
version = "0.1.0"
description = "Projeto de validacao de excel"
authors = ["Brunocodigoestudo <brunoeng.proj@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
streamlit = "^1.31.1"
pydantic = "^2.6.1"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
